[IMP]web: call _computeAdvancedEnabled in _processColumns as it need this.allColumns to compute advanced enabled columns also fix dropdown hidden behind scrollable table, hacky fix but there is another solution found

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -34,8 +34,13 @@
                     padding-right: 5px;
                 }
             }
-            .o_advanced_column_dropdown .dropdown-item label {
-                padding-left: 10px;
+            .o_advanced_column_dropdown .dropdown-item {
+                input {
+                    vertical-align: middle;
+                }
+                label {
+                    padding-left: 10px;
+                }
             }
         }
     }
